--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio",
+  "name": "ahmadmarhaba.github.io",
   "version": "0.1.0",
   "homepage": "https://ahmadmarhaba.github.io",
   "private": true,
